tests/error/iter_errors/iter_missing.err
Guppy compilation failed. Error in file $FILE:16

14:    @guppy(module)
15:    def test(x: MyType) -> None:
16:        for _ in x:
                    ^
GuppyTypeError: Expression of type `MyType` is not iterable
